# RoutingAssistant

./: README.md  data_tmp.json  main_.py  pyproject.toml  weather_tmp.json
forecast/: forecast_119-03006LK5113_20251109.csv  forecast_119-51810LK51814_20251109.csv  forecast_119-55943LK55945_20251109.csv  trafficforecast.py
saved_models/: feature_engineer.pkl
saved_models/gradient_boosting_20251109_051503/: config.json  model.pkl  scaler.pkl
