[project]
name = "congestionai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "langchain-openai>=1.0.2",
    "langchain[anthropic]>=1.0.5",
    "langgraph>=1.0.2",
    "matplotlib>=3.10.7",
    "numpy==1.23.0",
    "osmnx>=2.0.6",
    "python-dotenv>=1.2.1",
    "scikit-learn==1.3.0",
]
